<resources>
    <string name="app_name">PolarFitnessSolutions</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="StringLogin">Login</string>
    <string name="StringUsername">Username</string>
    <string name="StringPassword">Password</string>
    <string name="StringRegister">Register</string>
    <string name="StringRua">Rua</string>
    <string name="StringLocalidade">Localidade</string>
    <string name="StringNumero">Número de Telefone</string>
    <string name="StringRegistar">Registar</string>
    <string name="StringNIF">NIF</string>
    <string name="StringCodigoPostal">Código Postal</string>
    <string name="StringOu">OU</string>
    <string name="strBemVindo">Bem vindo:</string>
    <string name="StrTreinarBtn">Começar a Treinar</string>
    <string name="StrNutritionBtn">Planos Nutricionais</string>
    <string name="StrPhysicalEvaluationBtn">Avalições Físicas</string>
    <string name="StrMessagesBtn">Mensagens</string>
    <string name="StringVazio">Tem de preencher todos os campos</string>
    <string name="StringPlanosTreino">Planos de Treino</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Continuar">Continuar</string>
    <string-array name="Genero">
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Outro</item>
    </string-array>
    <string name="OpenNav">Open Navigation Drawer</string>
    <string name="CloseNav">Close Navigation Drawer</string>
    <string name="no_internet">Sem acesso à internet</string>
    <string name="StringPassInvalida">Password inferior a 8 caracteres</string>
    <string name="StringLoginInvalido">Login Inválido</string>
    <string name="StringRegistoInvalido">Registo Inválido</string>
    <string name="StringAtivarConta">Precisa de aguardar ativacao de conta</string>
    <string name="StringMailInvalido">Email Inválido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StringMarcacao">Marcar Consulta</string>
    <string name="StringConsultas">Consultas de Nutrição</string>
    <string name="StringPlanos">Planos de Nutrição</string>
    <string name="StringFacaRegisto">Faça o seu Registo</string>
    <string name="StringEditarPerfil">Editar Perfil</string>
    <string name="StringEditar">Editar</string>
    <string name="StringTreinar">Treinar</string>
    <string name="StringGuardar">Guardar</string>
    <string name="comecar_a_treinar">Comecar a treinar</string>
    <string name="planos_de_treino">Planos de Treino</string>
    <string name="planos_nutricionais">Planos Nutricionais</string>
    <string name="perfil">Perfil</string>
    <string name="treinos">Treinos</string>
</resources>