<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/logo_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/StringRegister"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/StringRegistar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="310dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="135dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="300dp"
                android:layout_height="53dp"
                android:layout_marginTop="132dp"
                android:ems="10"
                android:hint="Nome"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="300dp"
                android:layout_height="53dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="300dp"
                android:layout_height="53dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/StringPassword"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/etRua"
                android:layout_width="300dp"
                android:layout_height="53dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/StringRua"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etCondigoPostal"
                android:layout_width="300dp"
                android:layout_height="53dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/StringCodigoPostal"
                android:inputType="textPostalAddress"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/etLocalidade"
                android:layout_width="300dp"
                android:layout_height="53dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/StringLocalidade"
                android:inputType="textPersonName"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/etTelefone"
                android:layout_width="300dp"
                android:layout_height="53dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/StringNumero"
                android:inputType="phone"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/etNIF"
                android:layout_width="300dp"
                android:layout_height="53dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/StringNIF"
                android:inputType="number"
                android:textColorHint="#000000" />

            <Spinner
                android:id="@+id/spinnerGenero"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:entries="@array/Genero" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>